--- a/styles/index.css
+++ b/styles/index.css
@@ -12,7 +12,7 @@
   font-family: outfit-regular;
 }
 
-body {
+main {
   height: 100vh;
   background-color: var(--light-grey);
 
@@ -23,13 +23,14 @@ body {
   gap: var(--medium-spacing);
 }
 
-p {
-  padding: 0 var(--medium-spacing);
+p,
+h1 {
+  padding: 0 var(--small-spacing);
   text-align: center;
 }
 
 img {
-  border-radius: 10px;
+  border-radius: 15px;
 }
 
 .outfit-bold-text {
@@ -46,19 +47,24 @@ img {
   font-family: "outfit-regular";
 }
 
+div h1 {
+  padding-top: var(--medium-spacing);
+  padding-bottom: var(--small-spacing);
+}
+
 div p:last-child {
   padding-bottom: var(--medium-spacing);
+  color: var(--dark-grey);
 }
 
 #qr-code-container {
   background-color: var(--white);
   width: 350px;
   padding: var(--small-spacing);
-  border-radius: 10px;
+  border-radius: 15px;
   box-shadow: 0 5px 10px rgba(104, 119, 141, 0.05),
     0 15px 40px rgba(104, 119, 141, 0.2);
 
   display: flex;
   flex-direction: column;
-  gap: var(--small-spacing);
 }
