All the styling that was done to classes is now being done to classes for scalability.

--- a/styles/index.css
+++ b/styles/index.css
@@ -57,7 +57,7 @@ div p:last-child {
   color: var(--dark-grey);
 }
 
-#qr-code-container {
+.qr-code-container {
   background-color: var(--white);
   width: 325px;
   padding: var(--small-spacing);
