--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,16 @@
+/* Fonts */
+
+@font-face {
+  font-family: "outfit-regular";
+  src: url(../fonts/Outfit-Regular.ttf);
+}
+@font-face {
+  font-family: "outfit-bold";
+  src: url(../fonts/Outfit-Bold.ttf);
+}
+
+/* Variables */
+
 :root {
   --black: rgb(31, 49, 79);
   --dark-grey: rgb(104, 119, 141);
@@ -8,9 +21,30 @@
   --medium-spacing: 24px;
   --small-spacing: 16px;
 
-  font-size: 15px;
-  font-family: outfit-regular;
+  --regular-font: "outfit-regular";
+  --bold-font: "outfit-bold";
+  --regular-font-size: 15px;
+  --bold-font-size: 22px;
+
+  font-family: var(--regular-font);
 }
+
+/* Typography Classes */
+.text-bold {
+  font-size: 22px;
+  line-height: 120%;
+  letter-spacing: 0px;
+  font-family: var(--bold-font);
+}
+
+.text-regular {
+  font-size: 15px;
+  line-height: 140%;
+  letter-spacing: 0.2px;
+  font-family: var(--regular-font);
+}
+
+/* Layout */
 
 main {
   height: 100vh;
@@ -23,40 +57,6 @@ main {
   gap: var(--medium-spacing);
 }
 
-p,
-h1 {
-  padding: 0 var(--small-spacing);
-  text-align: center;
-}
-
-img {
-  border-radius: 15px;
-}
-
-.outfit-bold-text {
-  font-size: 22px;
-  line-height: 120%;
-  letter-spacing: 0px;
-  font-family: "outfit-bold";
-}
-
-.outfit-regular-text {
-  font-size: 15px;
-  line-height: 140%;
-  letter-spacing: 0.2px;
-  font-family: "outfit-regular";
-}
-
-div h1 {
-  padding-top: var(--medium-spacing);
-  padding-bottom: var(--small-spacing);
-}
-
-div p:last-child {
-  padding-bottom: var(--medium-spacing);
-  color: var(--dark-grey);
-}
-
 .qr-code-container {
   background-color: var(--white);
   width: 325px;
@@ -67,4 +67,26 @@ div p:last-child {
 
   display: flex;
   flex-direction: column;
+}
+
+/* Components */
+
+p,
+h1 {
+  padding: 0 var(--small-spacing);
+  text-align: center;
+}
+
+img {
+  border-radius: 15px;
+}
+
+div h1 {
+  padding-top: var(--medium-spacing);
+  padding-bottom: var(--small-spacing);
+}
+
+div p:last-child {
+  padding-bottom: var(--medium-spacing);
+  color: var(--dark-grey);
 }
