--- a/styles/index.css
+++ b/styles/index.css
@@ -23,22 +23,23 @@
 
   --regular-font: "outfit-regular";
   --bold-font: "outfit-bold";
-  --regular-font-size: 15px;
-  --bold-font-size: 22px;
+  --regular-font-size: 0.9375rem; /* 15px */
+  --bold-font-size: 1.375rem; /* 22px */
 
   font-family: var(--regular-font);
+  font-size: 1em;
 }
 
 /* Typography Classes */
 .text-bold {
-  font-size: 22px;
+  font-size: var(--bold-font-size);
   line-height: 120%;
   letter-spacing: 0px;
   font-family: var(--bold-font);
 }
 
 .text-regular {
-  font-size: 15px;
+  font-size: var(--regular-font-size);
   line-height: 140%;
   letter-spacing: 0.2px;
   font-family: var(--regular-font);
