--- a/styles/index.css
+++ b/styles/index.css
@@ -21,8 +21,8 @@
   --medium-spacing: 1.5rem;
   --small-spacing: 1rem;
 
-  --regular-font: "outfit-regular";
-  --bold-font: "outfit-bold";
+  --regular-font: "outfit-regular", system-ui, Arial, Helvetica;
+  --bold-font: "outfit-bold", Arial, Helvetica;
   --regular-font-size: 0.9375rem; /* 15px */
   --bold-font-size: 1.375rem; /* 22px */
 
